# explore-bevy-engine

./: Cargo.toml  README.md
assets/: idle_001.aseprite  jump_right_face.aseprite  map.json  stand_right_face_1hand.aseprite  walk_right_face_1hand.aseprite
src/: animation.rs  collision.rs  main.rs  map.rs  player.rs  window.rs
